Add function added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Todo</title>
 </head>
 <body>
-    
+    <header>
+    </header>
+    <main>
+        <form id="mainList">
+            <br>
+            <input type="text" id="input">
+            <input type="button" name="inputCheckbox" id="inputCheckbox" value="Add" onclick="addToList()">
+            <br>
+            <br>
+            <input type="button" value="Clear Selected" onclick="clearSelected()">
+        </form>
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
