--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,24 @@
     <script src="./JS/script.js"></script>
     <title>Todo</title>
 </head>
+
 <body>
     <header>
     </header>
     <main>
-        <form id="mainList">
-            <br>
+        <form id="mainList" onSubmit='document.getElementById("inputButton").click(); 
+        return false; '>
+        </form>
+        <form id="UI" onSubmit='document.getElementById("inputButton").click(); 
+        return false; '>
             <input type="text" id="input">
-            <input type="button" name="inputCheckbox" id="inputCheckbox" value="Add" onclick="addToList()">
-            <br>
-            <br>
+            <input type="button" name="inputButton" id="inputButton" value="Add" onclick="addToList()">
             <input type="button" value="Clear Selected" onclick="clearSelected()">
+            <input type="button" value="Clear All" onclick="clearAll()">
         </form>
     </main>
     <footer>
     </footer>
 </body>
+
 </html>
