Fixade lite css
Kommer att ändra till två kolumner med den ena som är vanliga grejer och den andra är important

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </form>
         <form id="UI" onSubmit='document.getElementById("inputButton").click(); 
         return false; '>
+            <label>Important<input type="checkbox" id="red"></label>
             <input type="text" id="input">
             <input type="button" name="inputButton" id="inputButton" value="Add" onclick="addToList()">
             <input type="button" value="Clear Selected" onclick="clearSelected()">
