--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <header>
     </header>
     <main>
+        <p class="title1"><h1 class="title1">Tasks</h1></p>
+        <p class="title2"><h1 class="title2">Important Tasks</h1></p>
         <div id="parent">
             <ul class="mainList" id="listNormal">
             </ul id="wa">
